* Fikset knapper som ikke var alignet riktig * Endret styling til "fare" for avbryt knapp * Fikset styling på Checkbox label i attributtVelger og MiljoeVelger * Tatt i bruk flere styled components * Noen andre mindre bugfikser på thumbRating og NavButton

--- a/src/main/web_src/src/components/bestillingsveileder/stegVelger/steg/steg1/attributtVelger/AttributtVelger.less
+++ b/src/main/web_src/src/components/bestillingsveileder/stegVelger/steg/steg1/attributtVelger/AttributtVelger.less
@@ -50,9 +50,4 @@
       margin-right: 30px;
     }
   }
-
-  .skjemaelement__label {
-    font-size: 1rem;
-    text-transform: none;
-  }
 }
