--- a/src/main/web_src/src/components/ui/titleValue/TitleValue.less
+++ b/src/main/web_src/src/components/ui/titleValue/TitleValue.less
@@ -29,6 +29,9 @@
 	&_full-width {
 		flex: 0 1 100%;
 	}
+	&_auto {
+		flex: auto;
+	}
 
 	h1,
 	h2,
